completed sigup, login and logout flow

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,11 @@
   display: block;
   margin-left: 31%;
 }
+.login {
+  display: block;
+  margin-left: 31%;
+  margin-top: 150px;
+}
 
 .register h2{
   display: block;
@@ -48,7 +53,7 @@
 
 .signup {
   display: block;
-  margin-left: 128px;
+  margin-left: 140px;
   width: 107px;
   padding: 7px;
   background-color: lightskyblue;
