--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,7 @@
   /* display: block; */
   margin-left: 20%;
   padding:20px;
-  border: 1px solid rgb(0, 213, 255);
+  border: 2px solid rgb(0, 213, 255);
   border-radius: 3px;
 }
 
@@ -121,6 +121,10 @@
   padding: 8px;
   border: 1.5px solid lightskyblue;
   border-radius: 2px;
+}
+
+.noresult{
+  margin: auto
 }
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
